--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO8+uvDLJNlHQwUksdQRVvoxMbePxHqGf"
+      crossorigin="anonymous"
+    />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
